@@ -1,3 +1,9 @@
+2011-07-03  Nikodemus Siivola  <nikodemus@random-state.net>
+
+	* swank-sbcl.lisp (debug-var-info): New function: calls SB-DI::DEBUG-VAR-INFO
+	when available.
+	(frame-locals, frame-var-value): Treat more-context and more-count vars specially.
+
 2011-06-21  Nikodemus Siivola  <nikodemus@random-state.net>
 
 	* swank.lisp (*indentation-cache-lock*): Deleted.
